Add maximum heap jvm args.