@@ -13,6 +13,8 @@ dependencies {
 application {
     mainClass.set("kt225.http.ApplicationKt")
     applicationDefaultJvmArgs += listOf(
+        "-Xmx128m",
+        "-XX:+UseZGC",
         "-Djava.library.path=$rootDir/cache/src/main/resources/"
     )
 }
